4.registry/manifests/3-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: data
              mountPath: /var/lib/registry
          readinessProbe:
            httpGet:
              path: /v2/
              port: 5000
            initialDelaySeconds: 2
            periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: docker-registry-pvc
