4.registry/manifests/4-service.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: tools
spec:
  type: ClusterIP
  selector:
    app: docker-registry
  ports:
    - name: http
      port: 5000
      targetPort: 5000
